--- a/style.css
+++ b/style.css
@@ -626,3 +626,49 @@ article....article...article
     75%  {left:0px; top:20px;}
     100% {left:0px; top:0px;}
   }
+
+
+  /* gift img for mobile */
+  @media only screen and (max-width: 480px) and (min-width: 320px) {
+    .gift_img{
+        width: 50%;
+        position: absolute;
+        bottom: 0%; 
+        right: 0%;
+        filter: grayscale(100%);
+        transition: 0.3s;
+    }
+    .gift_img:hover{
+        filter: grayscale(0%);
+    }
+    .gift_img {
+        margin-left:190px;
+        margin-top: 600px;
+        animation-name: gift_animation;
+        animation-duration: 2s;
+        animation-iteration-count: 30000;
+      }
+    
+  }
+  /* gift img for tab */
+  @media only screen and (max-width: 768px) and (min-width:481px) {
+    .gift_img{
+        width: 50%;
+        position: absolute;
+        bottom: 0%; 
+        right: 0%;
+        filter: grayscale(100%);
+        transition: 0.3s;
+    }
+    .gift_img:hover{
+        filter: grayscale(0%);
+    }
+    .gift_img {
+        margin-left:190px;
+        margin-top: 600px;
+        animation-name: gift_animation;
+        animation-duration: 2s;
+        animation-iteration-count: 30000;
+      }
+    
+  }
